[tool.pyright]
# Environment Options
pythonVersion = "3.12"

# Type Check Diagnostics Settings
typeCheckingMode = "standard"
reportPropertyTypeMismatch = "error" # Report if get(property) type doesn't match set(property) type

# Type Evaluation Settings
enableReachabilityAnalysis = true # Report unreachable code
strictListInference = true # List[T] instead of list[Any]
strictDictionaryInference = true # List[T] instead of dict[Any]
strictSetInference = true # List[T] instead of set[Any]

[tool.poetry]
name = "maps-app-backend"
version = "0.1.0"
description = "Backend for maps app"
authors = [
  "Vlad <vladko2003@yandex.ru>", 
  "lovushka <voronov.senya2014@mail.ru>", 
  "Alexey Grishin <mai.grishin.alexey@gmail.com>", 
  "K019N <kolannggwp@gmail.com>", 
]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "0.112.0" }
pyright = "1.1.375"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
